# audiohook

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.hooks/: pre-commit.sh
src/: config.py  main.py
src/core/: downloader.py  metadata.py
src/utils/: csv_handler.py  table.py  utils.py
