[project]
name = "youtube-audio-downloader"
dynamic = ["version"]
description = "Utility to download YouTube audio, curate metadata tags, and batch-process tracks"
readme = "README.md"
requires-python = "==3.14.*"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["mutagen", "prettytable", "python-dotenv", "yt-dlp"]

[dependency-groups]
dev = ["build", "ruff", "mypy"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 120
extend-exclude = ["build", "dist", ".venv", ".mypy_cache"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes errors
    "I", # isort
]
extend-select = [
    "UP",  # pyupgrade
    "SIM", # code simplifications
    "C4",  # comprehension checks
    "RET", # return practices
    "PTH", # pathlib over os.path
]
ignore = [
    "E203", # space before ':'
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
error_summary = false
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]
